site/assets/css/style.css
body,html {
	padding: 0px;
	margin: 0px;
	background-color: #050505;
	color: #DDD;
}

#wrap {
	margin: 0 auto;
	height: 100%;
}

#header {
	padding-top: 35px;
	border-bottom: 1px solid #555555;
	margin: 0px;
}

#logo {
	height: 150px;
	left: 50%;
	background-image: url('../image/logo.png');
	background-repeat: no-repeat;
	background-position: center;
}

#content {
	padding: 20px;
	min-height: 600px;
	overflow: auto;
	border-right: 1px solid #555555;
}

#middle_form-wrapper {
	width: 50%;
	margin-left: 50%;
	text-align: center;
}

#middle_form {
	margin-left: -100px;
	width: 200px;
	background-color: #111111;
	border: 1px solid #333;
	padding: 1em 2em 1em 2em;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

input[type="text"].middle_form, input[type="password"].middle_form {
	position: relative;
	min-width: 200px;
	width: 100%;
	margin: 0px;
	margin-top: 5px;
	margin-bottom: 5px;
}

#game {
	float: left;
	width: 100%;
	text-align: center;
}

#sidebar {
	position: relative;
	float: right;
	width: 260px;
	padding: 20px;
}

#footer {
	clear: both;
}

#quest_info {
	float: left;
	width: 45%;
	overflow: hidden;
}

#quest_content {
	float: left;
	width: 45%;
	overflow: hidden;
}

#answer_box {
	margin-top: 30px;
}

h1 {
	color: #2196F3;
	margin-bottom: 15px;
}

h2 {
	color: #42A5F5;
}

h3 {
	color: #64B5F6;
}

th.icon, td.icon {
	text-align: center;
}

td.centered {
	text-align: center;
}

.reorder:hover {
	cursor: move;
}

.link:hover {
	cursor: hand;
}

a, a:visited, a:active, a:link {
	text-decoration: none;
	color: #29B6F6;
}

a:hover {
	color: #81D4FA;
}

td, th {
	padding: 0.2em 1em 0.2em 1em;
	margin: 0px;
}

th {
	text-align: left;
	color: #BBDEFB;
}

tr {
	margin: 0px;
}

tr:hover {
	background-color: #263238;
}

input[type="button"], input[type="submit"].big, .button_big:visited, .button_big:active, .button_big:link {
	text-transform: uppercase;
	margin: 2px;
	padding: 8px;
	font-size: 12px;
}

input[type="button"], input[type="submit"], .button:visited, .button:active, .button:link {
	text-transform: uppercase;
	margin: 2px;
	padding: 4px;
	font-size: 12px;
}

input[type="button"], input[type="submit"]:hover, .button:hover, .button_big:hover {
	cursor: pointer;
}

input[type="text"], input[type="password"] {
	background-color: #fff;
	border: 1px solid #abc;
	padding: 2px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

input[type="text"].big, input[type="password"].big {
	font-size: 12px;
	background-color: #fff;
	border: 5px;
	padding: 1em;
}

/* button, input[type="button"], input[type="submit"] { */
/* 	box-shadow: */
/* 		0 2px 2px 0 rgba(1,1,1,0.14), */
/* 		0 1px 5px 0 rgba(1,1,1,0.12), */
/* 		0 3px 1px -2px rgba(1,1,0,0.2); */
/* } */

#no_more_hints {
	display: none;
}

#hint_next_button {
	display: none;
	position: relative;
	padding: 0;
	font-size: 18px;
	color: #fafafa;
	background-color: #2962ff;
	text-transform: uppercase;
	width: 100%;
	height: 36px;
	border-radius: 2px;
	border: none;
	-webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: transparent;
    z-index: 1;
	transform-origin: center center;
    transition: all .3s ease-out;
	outline: 0;
    will-change: opacity, transform;
}

#hint_next_button:hover {
	background-color: #2979ff;
}

#hint_next_button:active {
	background-color: #2979ff;
	outline: 0;
}

#hint_next_button:focus {
	outline: 0;
}

#hint_next_button > img {
	position: relative;
	z-index: 1;
}

#button_circle {
	position: absolute;
	z-index: 0;
	left: 0;
	top: 0;
	width: 0px;
	height: 36px;
	transform-origin: center center;
	transition: all 1500ms ease-out;
	background-color: #ef5350;
	border-radius: 2px;
}

#button_circle.active {
	background-color: #b71c1c;
	width: 100%;
}

#button_circle.pressed {
	background-color: #bbdefb;
	width: 100%;
	transition: all 100ms ease-out;
}

#button_circle.cooldown {
	background-color: #bbdefb;
	width: 0%;
	transition: all 300ms ease-in;
}

.centered {
	text-align: center;
}

.progress_text {
	margin-top: 0px;
	padding-top: 0px;
}

.meter {
	height: 5px;
	padding: 0px;
	margin-bottom: 0px;
	background-color: #607D8B;
}

.meter > span {
	display: block;
	height: 100%;
	width: 0%;
	background-color: #00C853;
}

.orange > span {
	background-color: #FF6D00;
}

.red > span {
	background-color: #D50000;
}

.input_info {
	display: inline-block;
	width: 150px;
	margin-bottom: 0.4em;
}

.error {
	color: #F44336;
}

.success {
/* 	font-size: 12pt; */
	color: #4CAF50;
}

.form_default {
	color: #263238;
}

.small {
	font-size: 8pt;
}

.info {
	font-size: 16pt;
	color: #FFEB3B;
}

#debug_message_wrapper {
	position: absolute;
	display: block;
	max-width: 400px;
	font-size: 12pt;
	background-color: #212121;
}

.debug_message {
	margin: 5px;
	color: #eceff1;
}

